Version 2.02.75 - 
=====================================
  Avoid segfault by limiting partial mode for lvm1 metadata. (2.02.74)
  Add dm_zalloc and use it and dm_pool_zalloc throughout.
  Add pv_get_property and create generic internal _get_property function.
  Add 'get' functions for pv and vg properties/fields.
  Make generic GET_*_PROPERTY_FN macros with secondary macro for vg, pv & lv.
  Add tags_format_and_copy() common function and call from _tags_disp.
  Add id_format_and_copy() common function and call from _uuid_disp.
  Simplify logic to create '{pv|vg|lv}_attr' strings.
  Refactor report.c '*_disp' functions to call supporting functions.
  Refactor lib/metadata/metadata.[ch] into {pv|vg|lv}.[ch].
  Fix memory leak of vg_read while using live copies of metadata in directories.
  Fix memory leak of config_tree in reinitialization code path.
  Swap pool destruction order in dmeventd_lvm2_exit() to fix leak report.
  Read whole /proc/self/maps file before working with maps entries.
  Speed up unquoting of quoted double quotes and backslashes.
  Speed up CRC32 calculations by using a larger lookup table.

Version 2.02.74 - 24th September 2010
=====================================
  Allow : and @ to be escaped with \ in device names of PVs.
  Replace alloca with dm_malloc in _aligned_io to avoid stack corruption.
  Fix partial mode operations for lvm1 metadata format.
  Track recursive filter iteration to avoid refreshing while in use. (2.02.56)
  Revert to old glibc vsnprintf behaviour in emit_to_buffer() to catch overflow.
  Allocate buffer for metadata tags dynamically to remove 4k limit.
  Add random suffix to archive file names to prevent races when being created.
  Reinitialize archive and backup handling on toolcontext refresh.
  Make poll_mirror_progress report PROGRESS_CHECK_FAILED if LV is not a mirror.
  Like mirrors, don't scan origins if ignore_suspended_devices() is set.
  Fix return type qualifier to avoid compiler warning. (2.02.69)