@@ -216,7 +216,7 @@ int add_mda(const struct format_type *fmt, struct dm_pool *mem, struct dm_list *
 
 	mdal->ops = mda_lists->raw_ops;
 	mdal->metadata_locn = mdac;
-	mdal->flags = 0;
+	mdal->status = 0;
 
 	mdac->area.dev = dev;
 	mdac->area.start = start;
